--- a/templates/authors.html
+++ b/templates/authors.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Authors</title>
-</head>
-<body>
-    <h1>Авторы</h1>
+{% extends "base.html" %}
+{% block title %}About{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+
+{% block add_menu %}
+            <a href="#home">About 1</a>
+            <a href="#news">About 2</a>
+{% endblock %}
+
+{% block add_dropdown %}
+        <a href="#">About 4</a>
+        <a href="#">About 5</a>
+{% endblock %}
+
+{% block content %}
+    <p class="important">
+    <h1>About</h1>
     <ul>
         {{object_list[0]}}
         {{object_list[0]['name']}}
@@ -17,5 +28,5 @@
             <li>{{author.name}}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+    </p>
+{% endblock %}
