--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Main Page{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+
+{% block content %}
     <h1>Contacts</h1>
 <!--    action="http://127.0.0.1:8000/contacts"-->
     <form method="GET" name="filter" >
@@ -17,5 +17,4 @@
             <input id="email" name="email"><br><br>
         <input type="submit" value="Отправить"></input>
     </form>
-</body>
-</html>
+{% endblock %}
