--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Main Page</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Main Page{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
+
+{% block add_menu %}
+            <a href="#home">Home 1</a>
+            <a href="#news">News 1</a>
+{% endblock %}
+
+{% block add_dropdown %}
+        <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
+{% endblock %}
+
+{% block content %}
     <h1>Main Page</h1>
-</body>
-</html>
+    <p class="important">
+      Welcome to my Main page.
+    </p>
+{% endblock %}
