--- a/templates/about.html
+++ b/templates/about.html
@@ -5,18 +5,28 @@
 {% endblock %}
 
 {% block add_menu %}
-            <a href="#home">About 1</a>
-            <a href="#news">About 2</a>
+<!--            <a href="#home">About 1</a>-->
+<!--            <a href="#news">About 2</a>-->
 {% endblock %}
 
 {% block add_dropdown %}
-        <a href="#">About 4</a>
-        <a href="#">About 5</a>
+<!--        <a href="#">About 4</a>-->
+<!--        <a href="#">About 5</a>-->
 {% endblock %}
 
 {% block content %}
-    <h1>Main Page</h1>
     <p class="important">
-      Welcome to my About page.
+    <h1>About</h1>
+    <ul>
+        {{object_list[0]}}
+        {{object_list[0]['name']}}
+
+        {{object_list.0}}
+        {{object_list.0.name}}
+
+        {% for author in object_list %}
+            <li>{{author.name}}</li>
+        {% endfor %}
+    </ul>
     </p>
 {% endblock %}
