--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
-{% block title %}Main Page{% endblock %}
+{% block title %}Обучаемся программировать!!!{% endblock %}
 {% block head %}
     {{ super() }}
 {% endblock %}
 
 {% block add_menu %}
-            <a href="#home">Home 1</a>
-            <a href="#news">News 1</a>
+
 {% endblock %}
 
 {% block add_dropdown %}
-        <a href="#">Link 4</a>
-        <a href="#">Link 5</a>
+
 {% endblock %}
 
 {% block content %}
-    <h1>Main Page</h1>
+    <h1>Обучаемся программировать!!!</h1>
     <p class="important">
-      Welcome to my Main page.
+      Добро пожаловать на главную страницу сайта по обучению программированию!<br>
+        Здесь вы можете обучиться программировать на любом из языков программирования <br>
+        достаточно выбрать понравившийся вам и уровень владения языком<br>
+        Так же вы можете обучаться как в онлай, так и в офлайн!<br>
+
+
     </p>
 {% endblock %}
